# kivyMobileApp

./: .gitignore  app_config.json  buildozer.spec  dependencies.py  main.kv  main.py  pyproject.toml  requirements.txt  summary.tx
application/: app_depends.py  application.py  layouts.py  screens.py
db/: config.py  crud.py  db.sqlite  models.py  schemas.py
design/: main_screen.kv  r_menu.kv  settings_sc.kv  start_sc.kv
kv/: bottom_bar.kv  drawer.kv  example_sc.kv  example_screen.kv  menu_examples.kv  settings_sc.kv  settings_screen.kv  start_sc.kv  start_screen.kv
py/: dependencies.py  drawer.py  example_sc.py  example_screen.py  screens.py  settings_sc.py  start_sc.py
