[tool.poetry]
name = "mykivyapp"
version = "0.1.0"
description = ""
authors = ["fernandoveragul <valentingullll@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8,<=3.12"
kivymd = "^1.1.1"
buildozer = "^1.5.0"
pydantic = "^1.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
